src/sass/dark-mode.scss
html.better-slp-dark-mode-transitioning * {
  transition: all 300ms !important;
}

html.better-slp-dark-mode-container {

  :root {
    --pie-bgcol: rgb(44,44,44) !important;
  }

  .page-content-body {
    background: #121212 !important;
  }

  .panel,
  .courserow-tooltip.tooltip .tooltip-inner,
  .sdl-course-grades button, .sdl-course-grades .grade-header,
  .pie-chart-gav div,
  .announcement {
    background: #1d1d1d !important;
  }

  .goal-panel,
  .sdl-course-grades button:hover,
  .sdl-goal-popover,
  .sdl-goal-popover-create,
  .sdl-goal-popover-footer {
    background: #2C2C2C !important;
  }

  .sdl-week-calendar-today,
  .announcement-body,
  .dropdown-menu,
  .focusarea .selected-panel .panel {
    background: #242424 !important;
  }

  .announcement-body-text .audience.badge,
  .dropdown-menu>li:not(.active)>a:hover, .dropdown-menu>li:not(.active)>a:focus {
    background: #353535 !important;
  }

  /*WHITE TEXT COLOR*/
  .app-title,
  .fa-data-title,
  .app-subheading.courserow-details-course-heading,
  .courserow-details-course-link-heading,
  .courserow-tooltip.tooltip .tooltip-inner,
  .mentor-checkin-prework-reminder-title,
  .app-heading,
  .media-circle-content,
  .project-overview-heading .app-subheading .project-asset-title,
  .project-overview-section .project-overview-heading .app-subheading,
  .project-lesson-media-block-icon,
  .needs-revision-popover strong,
  .app-subheading.project-overview-section,
  .app-compact-content-heading,
  .project-asset-card-title-link span,
  .project-plans-overview-content .app-subheading:not(.project-overview-section),
  .claro-index-card .app-subheading,
  .sdl-goal-popover .app-tertiaryheading,
  .app-page-title * {
    color: #ffffff !important;
    text-decoration-color: #cccccc !important;
  }

  /*GRAY TEXT*/

  .app-tertiaryheading .courserow-header,
  .app-tertiaryheading,
  .project-asset-card.secondary .project-asset-card-icon,
  .project-overview-heading .app-compact-content-heading:not(.token) {
    color: #b8b8b8 !important;
  }

  .app-heading {
    color: #bdbdbd;
  }

  .months-header li h2,
  .tutor-board-student-name,
  .tutor-board-sign-up-toggle label,
  .app-subheading,
  .announcement-details,
  .announcement-body-text p:not(.call-to-action),
  .dropdown-menu li:not(.active) a,
  .project-overview-section .rich-text-note-editor,
  .project-dimensions-explanation-section div:not(.token),
  .project-asset-card.secondary .project-asset-card-text-container .rich-text-note-editor,
  .claro-index-card span.text-muted,
  .sdl-goal-popover .compact-btn-link span,
  .sdl-goal-popover-input textarea::placeholder,
  div.tutor-board-sign-up-overlay-trigger .pull-right .text-muted {
    color: #b1b1b1 !important;
  }

  h3.courserow-header,
  h2.app-subtitle,
  .courserow-details-skillrow,
  .courserow-scores-score,
  .claro-standard-layout-page .project-day-to-day-side-nav-item-theme-default .project-day-to-day-side-nav-item-arrow,
  .app-page-title-aux,
  .needs-revision-popover,
  .announcement-body-text .audience.badge,
  .sdl-week-calendar thead .app-tertiaryheading,
  .resource-panel h4,
  .courserow-score-text,
  .resources.list-group-item,
  .resources-description,
  .focusarea-header-content-wrap,
  .focusarea-right-column .focusarea-attempts .focusarea-section p {
    color: #9a9a9a !important;
  }

  div.courserow-info.col-md-2 > div.col-wrapper > span > div *,
  .announcements ul li h2,
  .announcement-title,
  .resource-panel h3,
  .tutor-board-list-item.list-group-item .tutor-board-list-item-content.clearfix .tutor-board-student-name {
    color: #e9e9e9 !important;
  }

  .collapsible-double-panels .top-panel .objective-heading *,
  .assessment-panel .app-subheading,
  .focusarea-right-column .focusarea-attempts .focusarea-section .app-tertiaryheading {
    color: #d4d4d4 !important;
  }

  .project-agenda-item-list-item-header-info .time {
    color: #494949;
  }

  .project-asset-icon.material-icons-default,
  .sdl-goal-popover-input {
    background-color: rgba(0,0,0,0) !important;
    border-color: rgba(255,255,255,0.35) !important;
    color: rgba(255,255,255,0.35) !important;
  }

  .project-day-to-day-side-nav-item-theme-default .media-circle-background-circle,
  .media-circle.large-icon .media-circle-background-circle,
  .claro-index-card .media-circle-background-circle{
    background: rgba(255, 255, 255, 0.1) !important;
  }

  .project-day-to-day-side-nav-item-theme-default .project-day-to-day-side-nav-item-left-aligned-content.green .media-circle-background-circle {
    background: rgba(143, 255, 149, 0.3)!important;
  }

  .project-day-to-day-side-nav-item-theme-default .project-day-to-day-side-nav-item-left-aligned-content.yellow .media-circle-background-circle {
    background: rgba(245, 255, 100, 0.342)!important;
  }

  .project-day-to-day-side-nav-item-theme-default .project-day-to-day-side-nav-item-left-aligned-content.red .media-circle-background-circle {
    background: rgba(255, 117, 117, 0.384)!important;
  }

  .project-lesson-media-block-objective,
  .needs-revision-popover {
    background: #242424 !important;
  }

  .needs-revision-popover>.arrow:after {
    border-bottom-color: #242424 !important;
  }

  .project-agenda-timeline-item-icon-background,
  .project-agenda-timeline-item-line-1,
  .project-agenda-timeline-item-line-2 {
    background: #2C2C2C !important;
  }

  /*Default*/
  .default,
  .courserow-list-item-content-default:not(.success):not(.warning):not(.danger),
  .project-day-to-day-side-nav-item-new-feedback-token,
  .project-overview-section .token,
  .project-lesson-media-block-icon-background-circle,
  .focusarea-diagnostic-btn button,
  .token-display-only {
    background: rgba(255, 255, 255, 0.068) !important;
    color: #c4c4c4 !important;
  }

  /*Year buttons*/
  .success,
  .alert-success {
    background: hsl(143, 22%, 19%) !important;
    color: hsl(143, 44%, 65%) !important;
  }

  .success i {
    background: hsl(143, 63%, 35%) !important;
  }

  .warning {
    background: hsl(63, 22%, 19%) !important;
    color: hsl(63, 68%, 77%) !important;
  }

  .warning i{
    background: hsl(63, 63%, 35%) !important;
  }

  .danger  {
    background: hsl(6, 39%, 21%) !important;
    color: hsl(6, 68%, 77%) !important;
  }

  .danger i{
    background: hsl(6, 63%, 35%) !important;
  }


  /*REMOVE BOX SHADOW*/
  .claro-standard-layout-page .claro-this-year .this-year-outer .this-year-fade.right,
  .courserow-info.widen,
  .courserow-tooltip.tooltip .tooltip-inner,
  .goal-drawer,
  .focusarea .selected-panel {
    box-shadow: none !important;
  }

  /*REMOVE BACKGROUND COLOR*/
  .list-group-item,
  .tooltip-inner .app-heading,
  .sdl-goal-popover-input,
  .sdl-goal-popover-input textarea {
    background: none !important;
  }


  /*BORDER COLOR*/
  hr,
  .table-bordered>thead>tr>th, .assessmentTake-question-response .response-label .response-content table>thead>tr>th, .assessmentTake-question-text table>thead>tr>th, .table-bordered>thead>tr>td, .assessmentTake-question-response .response-label .response-content table>thead>tr>td, .assessmentTake-question-text table>thead>tr>td, .table-bordered>tbody>tr>th, .assessmentTake-question-response .response-label .response-content table>tbody>tr>th, .assessmentTake-question-text table>tbody>tr>th, .table-bordered>tbody>tr>td, .assessmentTake-question-response .response-label .response-content table>tbody>tr>td, .assessmentTake-question-text table>tbody>tr>td, .table-bordered>tfoot>tr>th, .assessmentTake-question-response .response-label .response-content table>tfoot>tr>th, .assessmentTake-question-text table>tfoot>tr>th, .table-bordered>tfoot>tr>td, .assessmentTake-question-response .response-label .response-content table>tfoot>tr>td, .assessmentTake-question-text table>tfoot>tr>td,
  .courserow-info.widen.months,
  .margin-vert-10,
  .project-day-to-day-side-nav-item,
  .claro-col-right,
  .tutor-board-list-item.list-group-item,
  div.project-asset-card.primary,
  .media.project-lesson-media-block-container,
  .bordered-list-card {
    border-color: #3e3e3e !important;
  }

  .score-badge {
    border-color: #4d4d4d !important;
  }

  .score-badge i {
    color: #474747 !important;
  }

  .collapsible-double-panels .top-panel,
  .focusarea-left-column .playlist-panel:not(.objective-panel),
  .focusarea-left-column .collapsible-double-panels .bottom-panel .list-group {
    box-shadow: 0px 0px 2px #868686 !important;
  }


  .this-year-explore-courses, .this-year-explore-courses:hover {
    border-top-color: #3e3e3e;
  }

  .project-day-to-day-side-nav-item:not(.selected):hover {
    background: #2c2c2c !important;
  }

  .app-body .avatar-profile {
    background: #2C2C2C !important;
  }

  .app-body .avatar-profile svg g path {
    stroke: rgba(161, 161, 161, 0.363);
    stroke-width: 7px;
    stroke-dasharray: 2,2;
    stroke-linejoin: round;
  }

  .upper-right-overlay .onboarding-nub {
    background: hsl(188, 22%, 15%) !important;
    border-color: hsl(191, 22%, 29%) !important;
  }

  .upper-right-overlay .onboarding-nub .btn .nub-content {
    color: hsl(188, 48%, 57%) !important;
  }

  .project-asset-copy-old-work-prompt {
    background-color: #351c22 !important;
  }

  .claro-standard-layout-page .claro-col-left {
    box-shadow: 1px 0 0 #474747 !important;
  }

  .claro-standard-layout-page .claro-col-right {
    box-shadow: -1px 0 0 #474747 !important;
  }

  /*Theme Color*/
  .btn-link,
  .claro-standard-layout-page .sdl-time-selector .btn,
  .nav-tabs>li.active>a,
  .nav-tabs>li.active>a:focus,
  .app ul.nav-tabs>li:not(.active)>a:hover,
  .project-day-to-day-side-nav-item-new-feedback-token {
    /*228*/
    color: hsl(228, 48%, 57%) !important;
  }

}

